# demeter

./: .gitignore  .gitmodules  .testr.conf  .travis.yml  LICENSE.md  Makefile  README.md  Vagrantfile  alembic.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test.py  tox.ini
alembic/: env.py
alembic/versions/: 271caf775a05_create_family_column.py  2b1b42252b23_create_address_and_tag_tables.py  2b1b42252b23_create_ipv4_address_table.py  2b1b42252b23_create_ipv4_addresses_and_namespaces_table.py
demeter/: __init__.py  address.py  client.py  config.py  foo.py  models.py  namespace.py  shell.py
demeter/app/: api.py
demeter/tests/: helper.py  test_address.py  test_namespace.py
demeter/tests/app/: test_api.py
doc/source/: address.rst  api.rst  client.rst  conf.py  config.rst  index.rst  models.rst  namespace.rst
tests/: demeter.json  helper.py  test_address.py  test_client.py  test_config.py  test_models.py  test_namespace.py
tests/app/: test_api.py
vagrant/: site.yml  travis.yml
vagrant/roles/retr0h.demeter/defaults/: main.yml
vagrant/roles/retr0h.demeter/tasks/: main.yml
vagrant/roles/retr0h.demeter/templates/: demeter.json.j2
