[metadata]
name = demeter
summary = demeter - TODO
description-file =
    README.md
author = John Dewey
author-email = john@dewey.ws
home-page = https://github.com/retr0h/demeter
classifier =
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    demeter = demeter.shell:main

[files]
packages =
    demeter

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
